--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,7 +1,7 @@
 .header {
-  background: var(--gray-200);
+  background: var(--gray-800);
   width: 100%;
-  height: 80px;
+  padding: 1.25rem 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -9,6 +9,6 @@
 
   h1 {
     font-size: 1.1rem;
-    color: var(--gray-700);
+    color: var(--gray-100);
   }
 }
