--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,19 +7,24 @@
 :root {
   --green: #00875f;
   --green-light: #00b37e;
-  --gray-100: #121214;
-  --gray-200: #202024;
-  --gray-300: #323228;
-  --gray-400: #7c7c8a;
-  --gray-500: #8d8d99;
-  --gray-600: #c4c4cc;
-  --gray-700: #e1e1e6;
-  --white: #ffffff;
+  --white: #fff;
+  --gray-100: #e1e1e6;
+  --gray-300: #c4c4cc;
+  --gray-400: #8d8d99;
+  --gray-600: #323238;
+  --gray-700: #29292e;
+  --gray-800: #202024;
+  --gray-900: #121214;
   --red: #f75a68;
 }
 
 body {
-  background-color: var(--gray-100);
+  background-color: var(--gray-900);
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+input, button, textarea {
   font-family: 'Roboto', sans-serif;
 }
 
