--- a/src/components/Post/styles.module.scss
+++ b/src/components/Post/styles.module.scss
@@ -6,6 +6,10 @@
   padding: 2.5rem 2.5rem 1rem 2.5rem;
   border-radius: 8px;
 
+  & + & {
+    margin: 2rem 0;
+  }
+
   .headerPost {
     width: 100%;
     display: flex;
@@ -16,6 +20,11 @@
       display: flex;
       align-items: center;
       gap: 20px;
+
+      img {
+        max-width: 50px;
+        border-radius: 50%;
+      }
 
       > div {
         display: flex;
@@ -76,5 +85,9 @@
       margin-top: 1rem;
       gap: 1rem;
     }
+  }
+
+  .noComments {
+    color: var(--white);
   }
 }
