--- a/src/components/CardComments/styles.module.scss
+++ b/src/components/CardComments/styles.module.scss
@@ -14,6 +14,7 @@
 
     img {
       width: 100%;
+      border-radius: 50%;
     }
   }
 
@@ -70,10 +71,13 @@
     footer {
       width: 100%;
       display: flex;
+      align-items: center;
+      gap: 10px;
 
       span {
         font-size: 0.875rem;
         color: var(--gray-400);
+        margin: 0;
       }
     }
   }
@@ -83,6 +87,10 @@
     border: 0;
     outline: none;
     cursor: pointer;
+    color: white;
+    display: flex;
+    align-items: center;
+    gap: 5px;
 
     & > svg {
       color: var(--red);
